<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutusActivity"
    xmlns:ads="http://schemas.android.com/apk/res-auto">

    <!--<TextView-->
        <!--android:id="@+id/textView3"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_marginTop="13dp"-->
        <!--android:fontFamily="casual"-->
        <!--android:gravity="center"-->
        <!--android:shadowColor="@color/DarkCyan"-->
        <!--android:shadowDx="1"-->
        <!--android:shadowDy="1"-->
        <!--android:shadowRadius="2"-->
        <!--android:text="The Kalakaar"-->
        <!--android:textSize="24sp"-->
        <!--android:textStyle="bold" />-->

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        ads:srcCompat="@drawable/kalakaarname"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="13dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/marathi"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@+id/imageView9"/>

    <TextView
        android:id="@+id/textView22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/about"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_below="@+id/textView2"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView22"
        android:layout_above="@+id/adView"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/about_us"
                android:textColor="@color/black"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView19"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/about_us_details"
                android:textColor="@color/black"
                android:textSize="17dp" />


            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView20"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/about_us_details2"
                android:textColor="@color/black"
                android:textSize="17dp" />
        </RelativeLayout>
    </ScrollView>




    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_home_footer2"/>

</RelativeLayout>