<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactusActivity"
    xmlns:ads="http://schemas.android.com/apk/res-auto">

    <!--<TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="13dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:shadowColor="@color/DarkCyan"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:text="The Kalakaar"
        android:textSize="26sp"
        android:textStyle="bold" />-->

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/kalakaartran" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView7"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:text="@string/contact_us_details"
        android:textSize="20sp" />
    <!--android:text="@string/contact_us"-->

    <TextView
        android:id="@+id/textView20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView19"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/privacy_policy"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold|italic"/>

    <TextView
        android:id="@+id/textView24"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView20"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/privacy_content"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_above="@+id/adView"
        android:layout_marginBottom="5dp"
        android:scrollbars = "vertical"/>


    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_home_footer"/>



</RelativeLayout>